Refactor EventProtocolAdapter